--- a/upload/src/main/resources/application.properties
+++ b/upload/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+logging.level.org.apache.coyote.http11=debug
 
+#multipart 설정 (default = true)
+spring.servlet.multipart.enabled=true
+
+#파일 사이즈 설정
+#spring.servlet.multipart.max-file-size=1MB
+#spring.servlet.multipart.max-request-size=10MB
