--- a/upload/src/main/resources/application.properties
+++ b/upload/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 logging.level.org.apache.coyote.http11=debug
 
-file.dir=C:/Users/fkavm/IdeaProjects/study/file/
+file.dir=/C:/Users/fkavm/IdeaProjects/study/file/
